// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactNative flex shorthand 1`] = `
Object {
  "component": <div
    className="a"
    isReactNative={true}
/>,
  "fela": ".a{flex:1}",
}
`;

exports[`ReactNative flex shorthand 2`] = `
Object {
  "component": <div
    className="a b"
    isReactNative={true}
/>,
  "fela": ".a{flex:1}.b{flex-shrink:2}",
}
`;

exports[`ReactNative flex shorthand 3`] = `
Object {
  "component": <div
    className="a b c"
    isReactNative={true}
/>,
  "fela": ".a{flex:1}.b{flex-shrink:2}.c{flex-basis:3px}",
}
`;

exports[`ReactNative flex shorthand 4`] = `
Object {
  "component": <div
    className="a b c"
    isReactNative={true}
/>,
  "fela": ".a{flex:3}.b{flex-shrink:2}.c{flex-basis:1px}",
}
`;

exports[`ReactNative render 1`] = `
Object {
  "component": <div
    className="a b c d"
    isReactNative={true}
/>,
  "fela": ".a{margin-bottom:24}.b{margin-left:24}.c{margin-right:24}.d{margin-top:24}",
}
`;

exports[`as to pass props to any component 1`] = `
Object {
  "component": null,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{height:48}",
}
`;

exports[`backgroundColor 1`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{background-color:blue}",
}
`;

exports[`border color shorthand 1`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{border-bottom-color:blue}.e{border-left-color:blue}.f{border-right-color:blue}.g{border-top-color:blue}",
}
`;

exports[`border color shorthand 2`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{border-bottom-color:green}",
}
`;

exports[`border color shorthand 3`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{border-bottom-color:green}.e{border-left-color:blue}.f{border-right-color:blue}.g{border-top-color:blue}",
}
`;

exports[`border radius shorthand 1`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{border-bottom-left-radius:1}.e{border-bottom-right-radius:1}.f{border-top-left-radius:1}.g{border-top-right-radius:1}",
}
`;

exports[`border radius shorthand 2`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{border-bottom-left-radius:2}",
}
`;

exports[`border radius shorthand 3`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{border-bottom-left-radius:2}.e{border-bottom-right-radius:1}.f{border-top-left-radius:1}.g{border-top-right-radius:1}",
}
`;

exports[`border width 1`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{border-bottom-width:1}.e{border-left-width:1}.f{border-right-width:1}.g{border-top-width:1}",
}
`;

exports[`border width 2`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{border-bottom-width:1}.e{border-left-width:0}.f{border-right-width:0}.g{border-top-width:0}",
}
`;

exports[`border width 3`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{border-bottom-width:2}.e{border-left-width:1}.f{border-right-width:1}.g{border-top-width:1}",
}
`;

exports[`ensure rhythm via padding compensation 1`] = `
Object {
  "component": <div
    className="a b c d e f g h"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{padding-left:23}.e{border-bottom-width:0}.f{border-left-width:1}.g{border-right-width:0}.h{border-top-width:0}",
}
`;

exports[`ensure rhythm via padding compensation 2`] = `
Object {
  "component": <div
    className="a b c d e f g h"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{padding-left:24}.e{border-bottom-width:0}.f{border-left-width:25}.g{border-right-width:0}.h{border-top-width:0}",
}
`;

exports[`flex shorthand 1`] = `
Object {
  "component": <div
    className="a b c d e f"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{flex-basis:auto}.e{flex-grow:1}.f{flex-shrink:1}",
}
`;

exports[`flex shorthand 2`] = `
Object {
  "component": <div
    className="a b c d e f"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{flex-basis:auto}.e{flex-grow:1}.f{flex-shrink:2}",
}
`;

exports[`flex shorthand 3`] = `
Object {
  "component": <div
    className="a b c d e f"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{flex-basis:3px}.e{flex-grow:1}.f{flex-shrink:2}",
}
`;

exports[`flex shorthand 4`] = `
Object {
  "component": <div
    className="a b c d e f"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{flex-basis:1px}.e{flex-grow:3}.f{flex-shrink:2}",
}
`;

exports[`just value style props 1`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{align-items:foo}",
}
`;

exports[`just value style props 2`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{align-self:foo}",
}
`;

exports[`just value style props 3`] = `
Object {
  "component": <div
    className="a b c d e f"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{flex-basis:auto}.e{flex-grow:foo}.f{flex-shrink:1}",
}
`;

exports[`just value style props 4`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{flex-basis:foo}",
}
`;

exports[`just value style props 5`] = `
Object {
  "component": <div
    className="a b c"
/>,
  "fela": ".a{display:flex}.b{flex-direction:foo}.c{position:relative}",
}
`;

exports[`just value style props 6`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{flex-grow:foo}",
}
`;

exports[`just value style props 7`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{flex-shrink:foo}",
}
`;

exports[`just value style props 8`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{flex-wrap:foo}",
}
`;

exports[`just value style props 9`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{justify-content:foo}",
}
`;

exports[`just value style props 10`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{opacity:foo}",
}
`;

exports[`just value style props 11`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{overflow:foo}",
}
`;

exports[`just value style props 12`] = `
Object {
  "component": <div
    className="a b c"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:foo}",
}
`;

exports[`just value style props 13`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{z-index:foo}",
}
`;

exports[`just value style props 14`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{border-style:foo}",
}
`;

exports[`margin bottom left right top 1`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:24}.e{margin-left:48}.f{margin-right:72}.g{margin-top:96}",
}
`;

exports[`margin shorthand 1`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:24}.e{margin-left:24}.f{margin-right:24}.g{margin-top:24}",
}
`;

exports[`margin shorthands are order independent 1`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:72}.e{margin-left:24}.f{margin-right:24}.g{margin-top:48}",
}
`;

exports[`margin shorthands are order independent 2`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:72}.e{margin-left:24}.f{margin-right:24}.g{margin-top:48}",
}
`;

exports[`margin shorthands are order independent 3`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:72}.e{margin-left:24}.f{margin-right:24}.g{margin-top:48}",
}
`;

exports[`margin shorthands are order independent 4`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:72}.e{margin-left:24}.f{margin-right:24}.g{margin-top:48}",
}
`;

exports[`margin shorthands are order independent 5`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:72}.e{margin-left:24}.f{margin-right:24}.g{margin-top:48}",
}
`;

exports[`margin shorthands are order independent 6`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:72}.e{margin-left:24}.f{margin-right:24}.g{margin-top:48}",
}
`;

exports[`margin shorthands are order independent 7`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:24}.e{margin-left:48}.f{margin-right:24}.g{margin-top:24}",
}
`;

exports[`margin shorthands are order independent 8`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:24}.e{margin-left:48}.f{margin-right:24}.g{margin-top:24}",
}
`;

exports[`marginBottom 1`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:24}",
}
`;

exports[`marginHorizontal shorthand 1`] = `
Object {
  "component": <div
    className="a b c d e"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-left:24}.e{margin-right:24}",
}
`;

exports[`marginVertical shorthand 1`] = `
Object {
  "component": <div
    className="a b c d e"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:24}.e{margin-top:24}",
}
`;

exports[`not shorthand rhythm props 1`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{height:24}",
}
`;

exports[`not shorthand rhythm props 2`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{max-height:24}",
}
`;

exports[`not shorthand rhythm props 3`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{max-width:24}",
}
`;

exports[`not shorthand rhythm props 4`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{min-height:24}",
}
`;

exports[`not shorthand rhythm props 5`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{min-width:24}",
}
`;

exports[`not shorthand rhythm props 6`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{width:24}",
}
`;

exports[`not shorthand rhythm props 7`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{bottom:24}",
}
`;

exports[`not shorthand rhythm props 8`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{left:24}",
}
`;

exports[`not shorthand rhythm props 9`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{right:24}",
}
`;

exports[`not shorthand rhythm props 10`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{top:24}",
}
`;

exports[`padding shorthand 1`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{padding-bottom:24}.e{padding-left:24}.f{padding-right:24}.g{padding-top:24}",
}
`;

exports[`rawStyle from style overrides props 1`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-left:2}",
}
`;

exports[`rawStyle overrides props 1`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-left:2}",
}
`;

exports[`render 1`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:24}.e{margin-left:24}.f{margin-right:24}.g{margin-top:24}",
}
`;

exports[`style mixStyles arg 1`] = `
Object {
  "component": <div
    className="a b c d e f g"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-bottom:24}.e{margin-left:24}.f{margin-right:24}.g{margin-top:24}",
}
`;

exports[`style overrides props 1`] = `
Object {
  "component": <div
    className="a b c d"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}.d{margin-left:48}",
}
`;

exports[`style theme arg 1`] = `
Object {
  "component": <div
    className="a b c"
/>,
  "fela": ".a{display:flex}.b{flex-direction:column}.c{position:relative}",
}
`;
